others/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-load-balancer
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "gke-k8s-loadbalancer-ip"
spec:
  defaultBackend:
    service:
      name: tomcat-app-service
      port:
        number: 80
  rules:
  - host: tomcatloomi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat-app-service
            port:
              number: 80
